TWEAK: Update package.json and descrips

--- a/src/static/index.pug
+++ b/src/static/index.pug
@@ -67,7 +67,7 @@ html(lang='en')
         h1.title Buttress
           sub JS
       section
-        div Realtime datastore for software
+        div The federated real-time open data platform.
       footer
         div Proudly open source ❤️ Available on 
           a(href="https://github.com/wearelighten/buttress-js" target="_BLANK") Github
